[package]
name = "jet-simulation"
version = "0.1.0"
edition = "2021"

[lib]
name = "jet_simulation"
path = "src/lib.rs"

[features]
default = ["margin"]
margin = [
    "jet-margin-sdk",
    "jet-margin",
    "jet-margin-pool"
]

[dependencies]
async-trait = "0.1"
bincode = "1.3"
bytemuck = "1"
parking_lot = "0.12"
anyhow = "1"

futures = "0.3"
tokio = { version = "1", features = ["rt"] }

solana-client = "1.9"
solana-sdk = "1.9"
solana-transaction-status = "1.9"
rand = "0.7"

spl-token = "3"
spl-token-swap = "2"
pyth-client = "0.5"

anchor-lang = { git = "https://github.com/jet-lab/anchor", branch = "master" }

jet-solana-rpc-api = { path = "../solana-rpc-api" }
jet-control = { path = "../../programs/control" }

jet-metadata = { path = "../../programs/metadata", features = ["no-entrypoint"] }
jet-proto-math = "1"

jet-margin-sdk = { path = "../rust", optional = true }
jet-margin = { path = "../../programs/margin", optional = true }
jet-margin-pool = { path = "../../programs/margin-pool", optional = true }

