[package]
name = "jet-proto-solana-rpc-api"
version = "1.0.0"
edition = "2021"

[lib]
name = "jet_solana_rpc_api"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
anyhow = "1.0"

tokio = { version = "1", features = ["rt"] }

solana-sdk = "1.9"
solana-client = "1.9"
solana-account-decoder = "1.9"
solana-transaction-status = "1.9"