[package]
name = "pyth"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "pyth"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
devnet = []
mainnet-beta=[]

[dependencies]
anchor-lang = { git = "https://github.com/jet-lab/anchor", branch = "master" }
arrayref = "0.3.6"
bytemuck = { version = "1.4.0" }
