[package]
name = "jet-margin-pool"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "jet_margin_pool"
path = "src/lib.rs"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
devnet = []

[dependencies]
bytemuck = "1.7"
static_assertions = "1.1"
bitflags = "1.3"

anchor-lang = { git = "https://github.com/jet-lab/anchor", branch = "master" }
anchor-spl = { git = "https://github.com/jet-lab/anchor", branch = "master" }

pyth-client = { version = "0.5", features = ["no-entrypoint"] }

jet-proto-math = { git = "https://github.com/jet-lab/program-libraries", branch = "main" }
jet-margin = { path = "../margin", features = ["cpi"] }
jet-metadata = { path = "../metadata", features = ["cpi"] }
